--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <section class="projects" id="projects">
             <h2>PROJECTS</h2>
             <h5>Static Website</h5>
-            <p>Thrilled to unveil my small static website project meticulously crafted with HTML, CSS. Built from the ground up, this project showcases my skills in turning a demo into a stunning reality. <a href="">World News</a></p>
+            <p>Thrilled to unveil my small static website project meticulously crafted with HTML, CSS. Built from the ground up, this project showcases my skills in turning a demo into a stunning reality. <a href="https://ahmadshabbir901.github.io/World-News/">World News</a></p>
             
 
             <h5>Front-End</h5>
