--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@
         <section class="projects" id="projects">
             <h2>PROJECTS</h2>
             <h5>Static Website</h5>
-            <p>Thrilled to unveil my small static website project meticulously crafted with HTML, CSS. Built from the ground up, this project showcases my skills in turning a demo into a stunning reality. <a href="https://ahmadshabbir901.github.io/World-News/">World News</a></p>
+            <p>Thrilled to unveil my small static website project meticulously crafted with HTML, CSS. Built from the ground up, this project showcases my skills in turning a demo into a stunning reality. <a href="https://shabbir-ahmed-se.github.io/World-News/">World News</a></p>
             
 
             <h5>Front-End</h5>
             <p>Excited to share my latest project on LinkedIn - a clone of the popular Usability Hub website, developed using only HTML and CSS!<br>
-                I've leveraged HTML to structure the content and CSS to precisely style each component, ensuring a visually appealing and responsive user experience. The project demonstrates my proficiency in front-end web development, as well as my attention to detail in replicating complex designs. <a href="https://ahmadshabbir901.github.io/UsabilityHub" target="_blank">UsabilityHub</a></p>
+                I've leveraged HTML to structure the content and CSS to precisely style each component, ensuring a visually appealing and responsive user experience. The project demonstrates my proficiency in front-end web development, as well as my attention to detail in replicating complex designs. <a href="https://shabbir-ahmed-se.github.io/UsabilityHub/" target="_blank">UsabilityHub</a></p>
         </section>
 
         <section class="skills" id="skills">
